K8s/appointment-ds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  labels:
    app: appointment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: 17rj/argogyafirst-appointment:latest
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  labels:
    app: appointment-service
spec:
  selector:
    app: appointment-service
  ports:
    - port: 8084
      targetPort: 8084
      name: http
  type: ClusterIP
