K8s/discovery-server-ds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  labels:
    app: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: 17rj/arogyafirst-discovery:latest # ← change to your actual image
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  labels:
    app: discovery-server
spec:
  selector:
    app: discovery-server
  ports:
    - port: 8761
      targetPort: 8761
      name: eureka
  type: ClusterIP
