K8s/doctor-ds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-service
  labels:
    app: doctor-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor-service
  template:
    metadata:
      labels:
        app: doctor-service
    spec:
      containers:
        - name: doctor-service
          image: 17rj/arogya-doctor-service:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
  labels:
    app: patient-service
spec:
  selector:
    app: patient-service
  ports:
    - port: 8082
      targetPort: 8082
      name: http
  type: ClusterIP
