K8s/insurance-ds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-service
  labels:
    app: insurance-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurance-service
  template:
    metadata:
      labels:
        app: insurance-service
    spec:
      containers:
        - name: insurance-service
          image: 17rj/arogya-insurance-service:latest
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: insurance-service
  labels:
    app: insurance-service
spec:
  selector:
    app: insurance-service
  ports:
    - port: 8086
      targetPort: 8086
      name: http
  type: ClusterIP
