K8s/medical-records-ds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-records-service
  labels:
    app: medical-records-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medical-records-service
  template:
    metadata:
      labels:
        app: medical-records-service
    spec:
      containers:
        - name: medical-records-service
          image: 17rj/arogya-medical-records-service:latest
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: medical-records-service
  labels:
    app: medical-records-service
spec:
  selector:
    app: medical-records-service
  ports:
    - port: 8085
      targetPort: 8085
      name: http
  type: ClusterIP
