K8s/patient-ds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
  labels:
    app: patient-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
        - name: patient-service
          image: 17rj/argogyafirst-patient:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
  labels:
    app: patient-service
spec:
  selector:
    app: patient-service
  ports:
    - port: 8081
      targetPort: 8081
      name: http
  type: ClusterIP
