K8s/pharmacy-ds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharmacy-service
  labels:
    app: pharmacy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pharmacy-service
  template:
    metadata:
      labels:
        app: pharmacy-service
    spec:
      containers:
        - name: pharmacy-service
          image: 17rj/arogya-pharmacy-service:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: pharmacy-service
  labels:
    app: pharmacy-service
spec:
  selector:
    app: pharmacy-service
  ports:
    - port: 8083
      targetPort: 8083
      name: http
  type: ClusterIP
