K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arogyafirst-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:...   # add if you have ACM cert
spec:
  ingressClassName: alb # recommended in recent Kubernetes versions
  rules:
    - http:
        paths:
          # Frontend - everything that doesn't match /api/
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          # API Gateway - all API calls
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
